work on planning page

--- a/index.html
+++ b/index.html
@@ -17,12 +17,21 @@
     <a class='fin' href='http://finance.nd.edu/'></a>
   </div>
 
+  <div id="navBar">
+    <p>Planning</p>
+    <p>529 Plans</p>
+    <p>Resources</p>
+    <p>Educators</p>
+    <p class="last">Contact</p>
+  </div>
+
   <div id='introBlock'>
     <div id='mainLogo'></div>
     <div id='mainText'>
       <p class='headerText'><strong>A COLLEGE EDUCATION</strong> is one of the best investments in a child&#39;s future.
-        It is also one of the most expensive. This site was created to assist you in researching various college savings options.
-        There are over one hundred 529 Plans in existence, most are sponsored by states.  These plans can be either savings plans or pre-paid tuition plans.
+        It is also one of the most expensive. Navigating the college savings industry can be daunting and confusing.
+        This site was created to assist you in researching various college savings options. We have worked with
+        industry experts to develop and maintain the following pages and guides to help you create the right savings plan for your family.  
       </p>
     </div>
   </div>
